--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-    "name": "tvify",
-    "description": "A web app for select your favorite tv shows",
-    "version": "0.1.0",
-    "dependencies": {
-        "jquery": "^2.2.3"
-    },
-    "devDependencies": {
-        "browserify": "^13.0.0"
-    },
-    "scripts": {
-        "build-js": "browserify index.js > bundle.js"
-    }
+  "name": "tvify",
+  "description": "A web app for select your favorite tv shows",
+  "version": "0.1.0",
+  "dependencies": {
+    "jquery": "^2.2.3",
+    "serve": "^1.4.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.0"
+  },
+  "scripts": {
+    "public": "mkdir -p public",
+    "build-js": "browserify -t [ babelify --presets [es2015] ] index.js > public/app.js",
+    "copy-files": "cp index.css public/app.css && cp index.html public/index.html",
+    "build": "npm run public && npm run build-js && npm run copy-files",
+    "serve": "serve public"
+  }
 }
