--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "dependencies": {
     "jquery": "^2.2.3",
+    "page": "^1.7.1",
+    "qs": "^6.1.0",
     "serve": "^1.4.0"
   },
   "devDependencies": {
@@ -13,8 +15,8 @@
   },
   "scripts": {
     "public": "mkdir -p public",
-    "build-js": "browserify -t [ babelify --presets [es2015] ] index.js > public/app.js",
-    "copy-files": "cp index.css public/app.css && cp index.html public/index.html",
+    "build-js": "NODE_PATH=. browserify -t [ babelify --presets [es2015] ] src/index.js > public/app.js",
+    "copy-files": "cp src/index.css public/app.css && cp src/index.html public/index.html",
     "build": "npm run public && npm run build-js && npm run copy-files",
     "serve": "serve public"
   }
